# tangogis

./: CMakeLists.txt  ProjectHome.md  README  config.h.in
branches/1.1.0/: CMakeLists.txt  README
branches/1.1.0/src/: callbacks.c  callbacks.h  friends.c  geo_photos.c  geocode_read.c  globals.c  globals.h  gps_functions.c  init.c  init.h  interface.c  interface.glade  interface.h  main.c  map_management.c  map_management.h  osd.c  poi.c  tile_management.c  track_route_google.c  track_route_google.h  tracks.c  tracks.h  util.c  util.h
branches/1.1.0/src/.vimprj/: sett.vim
src/: .globals.c.swo  .map_management.c.swo  .tracks.c.swo  Makefile  callbacks.c  callbacks.h  converter.c  friends.c  geo_photos.c  geocode_read.c  geocode_read.h  globals.c  globals.h  gps_functions.c  init.c  init.h  interface.c  interface.glade  main.c  map_management.c  map_management.h  osd.c  osd.h  tangogps  tile_management.c  tile_management.h  track_route_google.c  track_route_google.h  tracks.c  tracks.h  util.c  util.h
src/.deps/: converter.Po  friends.Po  geo_photos.Po  globals.Po  gps_functions.Po  init.Po  interface.Po  poi.Po  support.Po  tile_management.Po  tracks.Po  wp.Po
src/.vimprj/: .indexer_files  sett.vim
src/.vimprj/.indexer_files_tags/: tangogis
src/interface/: dialog1.glade  dialog2.glade  interface.glade  interface.ui
trunk/: CMakeLists.txt  README  config.h.in
trunk/src/: Makefile  callbacks.c  callbacks.h  converter.c  friends.c  geo_photos.c  globals.c  globals.h  gps_functions.c  init.c  interface.c  interface.glade  interface.h  main.c  map_management.c  map_management.h  poi.c  tangogps  tile_management.c  tile_management.h  tracks.c  wp.c
trunk/src/.deps/: callbacks.Po  exif.Po  globals.Po  init.Po  main.Po  map_management.Po  poi.Po  tile_management.Po  tracks.Po  util.Po  wp.Po
trunk/src/.vimprj/: .indexer_files  sett.vim
trunk/src/.vimprj/.indexer_files_tags/: tangogis
trunk/src/interface/: dialog1.glade  interface.ui
